--- a/train_switch.service
+++ b/train_switch.service
@@ -4,11 +4,11 @@ After=network.target
 
 [Service]
 ExecStart=/usr/bin/python3 app.py
-WorkingDirectory=/home/pi/Documents/trains/
+WorkingDirectory=/home/lionel/Pi-Train-Switching
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
-User=pi
+User=lionel
 
 [Install]
 WantedBy=multi-user.target
