--- a/train_switch.service
+++ b/train_switch.service
@@ -1,14 +1,17 @@
 [Unit]
 Description=Train Switch
+# launch service after network is established
 After=network.target
 
 [Service]
 ExecStart=/usr/bin/python3 app.py
-WorkingDirectory=/home/lionel/Pi-Train-Switching
+# ensure to replace `User` with your user
+WorkingDirectory=/home/celery/Pi-Train-Switching
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
-User=lionel
+# ensure to replace `User` with your user
+User=celery
 
 [Install]
 WantedBy=multi-user.target
