--- a/train_switch.service
+++ b/train_switch.service
@@ -1,14 +1,15 @@
 [Unit]
 Description=Train Switch
-After=network.target
+After=network.target vasd.service
 
 [Service]
 ExecStart=/usr/bin/python3 app.py
-WorkingDirectory=/home/%u/Pi-Train-Switching
+WorkingDirectory=/home/celeryman/Pi-Train-Switching
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
-User=%u
+User=celeryman
 
 [Install]
 WantedBy=multi-user.target
+Alias=train_switch.service
