--- a/train_switch.service
+++ b/train_switch.service
@@ -4,10 +4,12 @@ After=network.target vasd.service
 
 [Service]
 ExecStart=/usr/bin/python3 app.py
+# EDIT USER HERE
 WorkingDirectory=/home/celeryman/Pi-Train-Switching
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
+# EDIT USER HERE
 User=celeryman
 
 [Install]
