--- a/train_switch.service
+++ b/train_switch.service
@@ -4,13 +4,10 @@ After=network.target vasd.service
 
 [Service]
 ExecStart=/usr/bin/python3 app.py
-# EDIT USER HERE
-WorkingDirectory=/home/celeryman/Pi-Train-Switching
+WorkingDirectory=%h/Pi-Train-Switching
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
-# EDIT USER HERE
-User=celeryman
 
 [Install]
 WantedBy=multi-user.target
