remove_X_change_service

--- a/train_switch.service
+++ b/train_switch.service
@@ -10,5 +10,4 @@ StandardError=inherit
 Restart=always
 
 [Install]
-WantedBy=multi-user.target
-Alias=train_switch.service
+WantedBy=default.target
